sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: ';' expected but 'true' found.
    if (plusPetitQue(getValeur(i),getValeur(i+1)))==true{
                                                    ^